fix: update styling for wrapper and set min-width to 2rem to resolve layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -216,7 +216,7 @@
 
 @layer utilities {
   .wrapper {
-    @apply h-full w-full max-w-7xl px-4 py-4 md:px-12 lg:pl-20 lg:pr-12 lg:mx-auto xl:max-w-[90rem];
+    @apply h-full w-full max-w-7xl px-4 py-4 md:px-12 lg:px-20 lg:mx-auto xl:max-w-[90rem];
   }
 
   .flex-center {
